test/files/neg/t910.scala
object RegExpTest1 extends App {
  def co(x: Seq[Char]) = x match {
    case Seq('s','c','a','l','a', rest @ _*) =>
    val y: Seq[Int] = rest
        y
  }
}
